Updated release mechanism

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           command: |
             if [ -n "$CIRCLE_TAG" ]
             then
-                docker-compose exec dev-env ghr -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${CIRCLE_TAG} build/
+                docker-compose exec dev-env bin/release ${CIRCLE_SHA1} ${CIRCLE_TAG}
             fi
       - run:
           name: Save image of development environment into cache (save from docker)
