--- a/bin/build
+++ b/bin/build
@@ -3,10 +3,12 @@ set -eu -o pipefail
 cd "$(dirname $0)/.."
 
 mkdir -p build
-clang++ src/*.cc -o build/eval-the-evil \
+clang++ src/*.cc -o build/eval-the-evil -g -DBOOST_STACKTRACE_USE_BACKTRACE=1 \
     -pthread \
     -lrt \
     -lstdc++ \
+    -ldl \
+    -l:libbacktrace.a \
     -l:libv8_monolith.a \
     -l:libboost_program_options.a \
     -l:libboost_system.a
